--- a/ocr-fe/package.json
+++ b/ocr-fe/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jsdom": "^24.1.1",
+    "msw": "^2.3.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
